# yastn

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS.txt  CHANGELOG.md  README.md  conftest.py  output_checkpoint.p  output_state.json  pylintrc  pyproject.toml  requirements.txt  setup.py  tmp.h5
.github/workflows/: docs.yml  main.yml
benchmarks/: .gitignore  bench_ctm_C2x2.py  bench_dmrg.py  ipeps_U1.json  ipeps_U1xU1.json  peps-torch_U1xU1.sh
benchmarks/bench_ctm/: export_shapes.py  model_parent.py  model_yastn_basic_double_layer.py  model_yastn_basic_single_layer.py  model_yastn_fpeps.py  model_yastn_no_fuse.py  run_bench.py
containers/: Dockerfile-cuda13.1-torch2.11-cuten2.6.0  Dockerfile-nvidia-pytorch-26.03-py3
docs/: .~lock.convenentions.odg#  convenentions.odg
docs/source/: conf.py  index.rst  modules.rst  yamps.mps.rst  yamps.ops.rst  yamps.rst  yamps.tensor.rst  yast.fpeps.rst  yast.mps.rst  yast.tensor.rst  yastn.fpeps.rst  yastn.mps.rst  yastn.quickstart.rst  yastn.tensor.rst
examples/: blbq-spin1.py  evolve_Ising_2D.py
experimental/: Makefile  backend_np.py  backend_np_1d.py  backend_np_c_1d.py  backend_np_c_mp_1d.py  backend_torch.py  backend_torch_1d.py  backend_torch_cpp.py  backend_torch_cpp_1d.py  main.py  main_d7chi98_1d.py  make_tm_worker_dll_in_windows.cmd  setup.py  setup_tm_worker.py  tm_worker.c  torch_mmib.cpp  torch_mtm.cpp  torch_mtm_1d.cpp
experimental/cuda_blocksparse/: README.md  pyproject.toml  setup.py
experimental/cuda_blocksparse/test/test_torch/: CMakeLists.txt  README  test_cpu.cpp
experimental/cuda_blocksparse/test/test_torch_cuda/: CMakeLists.txt  README  test_torch_cuda.cpp
models/generalized_AIM/: sweep_parameters.py  test_AIM.py  test_output.h5  transport_vectorization.py  transport_vectorization_U1.py  transport_vectorization_Z2.py  transport_vectorization_full.py  transport_vectorization_general.py
models/generalized_AIM_Influence/: README.md  requirements.txt  setup.py  sweep_parameters.py  test_import_h5py.py
models/transport_open/: test_transport.py  transport_vectorization.py  transport_vectorization_U1.py  transport_vectorization_Z2.py  transport_vectorization_full.py  transport_vectorization_general.py
source/: conf.py  index.rst
tests/: conftest.py  prof.sh  run_pytest.sh  test_dmrg.py  test_mps.py  tmp.h5
tests/.benchmarks/: profile_ctmrg.py  test_ctmrg_components.py
tests/configs/: config_U1.py  config_U1_C_fermionic.py  config_U1_fermionic.py  config_Z2.py  config_Z2_U1.py  config_dense.py  sym_Z2_U1.py
tests/experimental/: test_Hubbard_para.py
tests/models/: 21_transport_vectorization.py  test_tdvp.py  test_transport.py  transport_vectorization_full.py  transport_vectorization_general.py  transport_vectorization_sym.py
tests/mps/: __init__.py  a.cprof  a.prof  atest_import_export.py  b.cprof  c.cprof  config_U1.py  config_U1_R.py  config_Z2_R.py  config_Z2_U1_R.py  config_dense.py  config_dense_R.py  context.py  generate_automatic.py  generate_by_hand.py  generate_random.py  ops_U1.py  ops_Z2.py  ops_Z2_old.py  ops_dense.py  ops_dense_old.py  ops_full.py  run_command.py  test_addition.py  test_algebra.py  test_automatic_Mps.py  test_build_mpo_manually.py  test_canonical.py  test_canonize.py  test_checks.py  test_copy.py  test_dmrg.py  test_environment.py  test_generate_mpo.py  test_generator.py  test_generator2.py  test_generator_class.py  test_initialization.py  test_krylov.py  test_latex2term.py  (+14 more)
tests/operators/: test_meta_operators.py  test_ordering_sign.py  test_qdit.py  test_spin1.py  test_spin12.py  test_spinful_fermions.py  test_spinful_fermions_tJ.py  test_spinless_fermions.py
tests/peps/: METTS_number_conservation_investigate.py  NTU_error_shape_rectangle_Nx_5_Ny_5_boundary_finite_purification_time_fixed_bd_0.0_optimal_two-step_Ds_6_U_12.00_MU_UP_0.00000_MU_DN_0.00000_T_UP_1.00_T_DN_1.00_U1xU1_ind.txt  NTU_spinfull_Hubbard.py  NTU_spinfull_Hubbard_hole_motion.py  NTU_spinless_fermi_sea.py  NTU_spinless_fermi_sea_hole_motion.py  SVD_error_shape_rectangle_Nx_5_Ny_5_boundary_finite_purification_time_fixed_bd_0.0_optimal_two-step_Ds_6_U_12.00_MU_UP_0.00000_MU_DN_0.00000_T_UP_1.00_T_DN_1.00_U1xU1_ind.txt  ctm_iteration_convergence_scheme_False_shape_rectangle_Nx_3_Ny_3_boundary_infinite_purification_True_fixed_bd_0.0_optimal_two-step_Ds_8_MU_0.00000_T_1.00_U1.txt  ctm_iteration_convergence_scheme_fix_sign_True_shape_rectangle_Nx_3_Ny_3_boundary_infinite_purification_True_fixed_bd_0.0_optimal_two-step_Ds_8_MU_0.00000_T_1.00_U1.txt  ctm_iteration_convergence_scheme_shape_rectangle_Nx_3_Ny_3_boundary_infinite_purification_True_fixed_bd_0.0_optimal_two-step_Ds_8_MU_0.00000_T_1.00_U1.txt  ctmrg_hubbard.py  for_quickstart.py  generate_CtmEnv_Hubbard.py  generate_CtmEnv_Hubbard_time_evolution_with_hole.py  generate_CtmEnv_spinless_fermi_sea.py  generate_CtmEnv_spinless_fermi_sea_time_evolution_with_hole.py  generate_environment_Hubbard.py  hole_evolution_time_tracker_Hubbard.py  hole_evolution_time_tracker_spinless.py  observables_Hubbard_ground_state.py  observables_spinless_fermi_sea.py  purification_hubbard.py  quickstart_hubbard.py  spinful_Hubbard_purification.py  spinful_tJ_ground_state.py  spinfull_chi_20.0_shape_rectangle_Nx_5_Ny_5_boundary_finite_purification_False_fixed_bd_0.0_optimal_two-step_Ds_4_U_12.00_MU_UP_0.00000_MU_DN_0.00000_T_UP_1.00_T_DN_1.00_U1xU1_ind.txt  test_CTM_Onsager.py  test_CTM_purification_fermions.py  test_CTM_purification_spinfull_fermions.py  test_CTM_purification_spinless_fermions.py  test_EnvWindow.py  test_Hubbard_prob.py  test_NTU_CTM_purification_spinful_fermions.py  test_NTU_CTM_purification_spinfull_fermions.py  test_NTU_CTM_purification_spinless_fermions.py  test_ad.py  test_addition.py  test_apply_gate.py  test_bond_metric.py  test_bp.py  (+58 more)
yamps/: __init__.py  _auxliary.py  _compression.py  _dmrg.py  _env.py  _env2.py  _env3.py  _generate.py  _generator.py  _mps.py  _tdvp.py  basis.py  compression.py  dmrg.py  geometry.py  tdvp.py
yast/: __init__.py  initialize.py
yastn/: __init__.py  _from_dict.py  _split_combine_dict.py  initialize.py
(+679 files in other folders)
