[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "yastn"
description = "YASTN - Yet Another Symmetric Tensor Network"
authors = [{name = "The YASTN Authors"},]
maintainers = [{name = "Marek Rams", email = "marek.rams@uj.edu.pl"},
               {name = "Juraj Hasik", email = "juraj.hasik.sk@gmail.com"},]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.6",
    "scipy>=1.11.4",
    "tqdm",
    "h5py",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["yastn*"]
exclude = ["docs*", "tests*", "experimental*"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-randomly"]
docbuild = ["sphinx", "sphinxcontrib-napoleon", "pydata-sphinx-theme"]
torch = ["torch>=2.4"]

[tool.setuptools_scm]
write_to = "yastn/_version.py"

[project.urls]
Homepage = "https://github.com/yastn/yastn"
Documentation = "https://yastn.github.io/yastn/"
Repository = "https://github.com/yastn/yastn"
Issues = "https://github.com/yastn/yastn/issues"
